2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/manager.py:
	Change exception raising to new log framework (no more
	sys.exc_info).
	Reflection support (resources).
	Small bug fix on Window platform when shuting down.
	Manager's identity (host/port) fixes (still with some bugs, but
	improving).

	* src/chimera/core/proxy.py: Identity fixes for URI only Proxies.
	Better error messages when Proxy fails.
	Configuration support using += (OMG, how this was not implemented
	yet!?).
	Better method type checking when subscribing to events.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/config.py:
	Add Enum checker.
	Add Coord option and checker (option added to save Coord state
	when creating the option.
	Small fixes on Config.

	* src/chimera/core/test/test_config.py: Test those new features.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/site.py: New object. Used as a data container
	with site specific information. Date/time functions will be
	implemented in the future.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/tests/test_chimera_object.py: Improved tests
	with exception testing.

	* src/chimera/core/chimeraobject.py:
	Add bulk configuration support.
	Add Very simple reflection.

	Small fix on identity of objects (new locations with hosts/port).

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/compat.py: Add few functions to make Chimera
	2.4 compatible (any, all are only defined on Py2.5)

	* src/chimera/core/threads.py: Remove auto-locking support as this
	is handled in MetaObject level now (see below).

	* src/chimera/core/classloader.py: Improved and cleaned expection
	raising (no need to hack with sys.exc_info, thanks to log.py
	work).

	* src/chimera/core/callback.py: Fix documentation and PEP-8 80
	column limit where reasonable.

	* src/chimera/core/eventsproxy.py: Remove unreachable handlers
	when publishing.
